# vault-ordbok

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ci/: before_deploy.sh
src/: cli.rs  error.rs  main.rs  parser.rs  vault.rs
tests/manifests/: k8s_duplicated_keys.yaml  k8s_multiple_keys.yaml
